<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/dc_header" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question1" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/q1c1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1ch1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1ch2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1ch3" />
            </RadioGroup>

            <TextView
                android:id="@+id/ques2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/q2ch1" />

            <CheckBox
                android:id="@+id/q2c1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/q2ch2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/q2ch3" />

            <CheckBox
                android:id="@+id/q2c2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/q2ch4" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question3" />

            <EditText
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question4" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4ch1" />

                <RadioButton
                    android:id="@+id/q4c1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4ch2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4ch3" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question5" />

            <EditText
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question6" />

            <CheckBox
                android:id="@+id/q6c1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/q6ch1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/q6ch2" />

            <CheckBox
                android:id="@+id/q6c2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/q6ch3" />

            <CheckBox
                android:id="@+id/q6c3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/q6ch4" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:onClick="submit"
                android:text="@string/submit_button" />

            <TextView
                android:id="@+id/results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:text="Results"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>
    </RelativeLayout>

</ScrollView>